<resources>
    <string name="app_name">M2C</string>
    <string name="take_photo">Take Photo</string>
    <string name="flag_from">flag_from</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="history">History</string>
    <string name="terms_details">Dummy Data\nPlease read these terms and conditions carefully.These terms and conditions set out the rights and obligations of you, the player, and us, the coach, in connection with your use of the Service. All the terms and conditions of this agreement are legally binding, so please read them through carefully.\n\n
This agreement:\n*replaces all earlier terms and conditions relating to the Service (if any) except where we advise you otherwise:
* is in addition to the terms and conditions that apply to the sole/joint accounts you maybe accessing through this service. Except as otherwise provided in Clause 4, if there is a conflict between the terms and conditions of this agreement and any other relevant terms and conditions, the terms and conditions of this agreement will prevail; and
* relates to individual accounts in your sole name, and accounts held jointly with other account holders and signing authorities on an either or survivor basis (Eligible Accounts). In the last sections of this agreement, you will find definitions of some of the words and phrases used in these terms and conditions</string>
    <string name="working_on">Working on these areas will allow you to <b><font fgcolor='#0069B4'>improve\n your swing the most</font></b>.</string>
    <string name="terms">By Signing up you are agreering to our<b><font fgcolor='#0069B4'> Terms of Service</font></b>\nand <b><font fgcolor='#0069B4'> Privacy Policy.</font></b></string>
    <string name="terms_register">By tapping Register you agree to Motion 2 Coach\n<b><font fgcolor='#0069B4'> Terms of use</font></b> and <b><font fgcolor='#0069B4'> Privacy Policy.</font></b></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avoid_swaying"><b><font fgcolor='#0069B4'>Reminder:</font></b> Avoid swaying(too much lower body movement to the right) to maintain a stable lower body</string>
    <string name="let_s_start_by_creating_your_account">Let\'s start by creating your account</string>
    <string name="payment_label">By choosing "<b>M2C Premium</b>", your PayPal account will be charged, and your subscription will be renewed automatically. By choosing "<b>M2C Premium</b>", you agree to our <font fgcolor='#0069B4'><b>Terms &amp; Conditions</b></font></string>
    <string name="first_name">First Name<font fgcolor='#DB1F35'>*</font></string>
    <string name="last_name">Last Name<font fgcolor='#DB1F35'>*</font></string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="role">Role<font fgcolor='#DB1F35'>*</font></string>
    <string name="hand">Select Hand<font fgcolor='#DB1F35'>*</font></string>
    <string name="month">Month</string>
    <string name="next">Next</string>
    <string name="address_information">Address Information</string>
    <string name="street">Street</string>
    <string name="house_number">House Number</string>
    <string name="zip_code">Zip Code</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="phone_number">Phone Number</string>
    <string name="account_information">Account Information</string>
    <string name="email">Email<font fgcolor='#DB1F35'>*</font></string>
    <string name="enter_password">Enter Password<font fgcolor='#DB1F35'>*</font></string>
    <string name="re_password">Re-type Password<font fgcolor='#DB1F35'>*</font></string>
    <string name="hint_slash">-</string>
    <string name="enter_the_5_digit_code_sent_to_you_at_n30_5">Enter the 5 digit code sent to you at\n</string>
    <string name="area_to_work">Areas to work on</string>
    <string name="action_plan">Action Plan</string>
    <string name="best_area">Best Area</string>
    <string name="swing_again">Swing Again</string>
    <string name="swing">Swing</string>
    <string name="kinematic">Kinematic Sequence</string>
    <string name="segment">Segment Dimensions</string>
    <string name="back">Back</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="continue_txt">Continue</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="more">More</string>
    <string name="unit">Unit</string>
    <string name="amateur">Amateur</string>
    <string name="coach">Coach</string>
    <string name="professional">Professional</string>
    <string name="upload_image">Upload Profile Image</string>
    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="pref_screen" translatable="false">ps</string>
    <string name="pref_screen_title_live_preview" translatable="false">Live preview settings</string>
    <string name="pref_screen_title_still_image" translatable="false">Still image settings</string>
    <string name="pref_screen_title_camerax_live_preview" translatable="false">CameraX live preview settings</string>
    <string name="pref_screen_title_cameraxsource_demo" translatable="false">CameraXSource live preview settings</string>
    <string name="pref_category_info" translatable="false">Detection Info</string>
    <string name="pref_category_face_detection" translatable="false">Face Detection</string>
    <string name="pref_category_object_detection" translatable="false">Object Detection / Custom Object Detection</string>
    <string name="pref_category_automl" translatable="false">AutoML Image Labeling</string>
    <string name="pref_category_pose_detection" translatable="false">Pose Detection</string>
    <string name="pref_category_segmentation" translatable="false">Selfie Segmentation</string>
    <string name="pref_category_text_recognition" translatable="false">Text Recognition</string>
    <string name="pref_category_key_camera" translatable="false">pckc</string>
    <string name="pref_category_title_camera" translatable="false">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
    <string name="pref_key_camerax_rear_camera_target_resolution" translatable="false">crctas</string>
    <string name="pref_key_camerax_front_camera_target_resolution" translatable="false">cfctas</string>
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="pref_title_rear_camera_preview_size" translatable="false">Rear camera preview size</string>
    <string name="pref_title_front_camera_preview_size" translatable="false">Front camera preview size</string>
    <string name="pref_title_camerax_rear_camera_target_resolution" translatable="false">CameraX rear camera target resolution</string>
    <string name="pref_title_camerax_front_camera_target_resolution" translatable="false">CameraX front camera target resolution</string>
    <string name="pref_title_camera_live_viewport" translatable="false">Enable live viewport</string>
    <string name="pref_summary_camera_live_viewport" translatable="false">Do not block camera preview drawing on detection</string>
    <string name="pref_title_info_hide" translatable="false">Hide detection info</string>
    <string name="pref_key_info_hide" translatable="false">ih</string>
    <string name="pref_title_group_recognized_text_in_blocks" translatable="false">Group recognized text in paragraphs</string>
    <string name="pref_key_group_recognized_text_in_blocks" translatable="false">grtib</string>
    <string name="pref_title_show_language_tag" translatable="false">Show language identified</string>
    <string name="pref_key_show_language_tag" translatable="false">slt</string>
    <string name="pref_title_object_detector_enable_multiple_objects" translatable="false">Enable multiple objects</string>
    <string name="pref_key_live_preview_object_detector_enable_multiple_objects" translatable="false">lpodemo</string>
    <string name="pref_key_still_image_object_detector_enable_multiple_objects" translatable="false">siodemo</string>
    <string name="pref_title_object_detector_enable_classification" translatable="false">Enable classification</string>
    <string name="pref_key_live_preview_object_detector_enable_classification" translatable="false">lpodec</string>
    <string name="pref_key_still_image_object_detector_enable_classification" translatable="false">siodec</string>
    <string name="pref_title_face_detector_landmark_mode" translatable="false">Landmark mode</string>
    <string name="pref_key_live_preview_face_detection_landmark_mode" translatable="false">lpfdlm</string>
    <string name="pref_entries_face_detector_landmark_mode_no_landmarks" translatable="false">No landmarks</string>
    <string name="pref_entries_face_detector_landmark_mode_all_landmarks" translatable="false">All landmarks</string>
    <string name="pref_entry_values_face_detector_landmark_mode_no_landmarks" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_landmark_mode_all_landmarks" translatable="false">2</string>
    <string name="pref_title_face_detector_contour_mode" translatable="false">Contour mode</string>
    <string name="pref_key_live_preview_face_detection_contour_mode" translatable="false">lpfdcm</string>
    <string name="pref_entries_face_detector_contour_mode_no_contours" translatable="false">No contours</string>
    <string name="pref_entries_face_detector_contour_mode_all_contours" translatable="false">All contours</string>
    <string name="pref_entry_values_face_detector_contour_mode_no_contours" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_contour_mode_all_contours" translatable="false">2</string>
    <string name="pref_title_face_detector_classification_mode" translatable="false">Classification mode</string>
    <string name="pref_key_live_preview_face_detection_classification_mode" translatable="false">lpfdcfm</string>
    <string name="pref_entries_face_detector_classification_mode_no_classifications" translatable="false">No classifications</string>
    <string name="pref_entries_face_detector_classification_mode_all_classifications" translatable="false">All classifications</string>
    <string name="pref_entry_values_face_detector_classification_mode_no_classifications" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_classification_mode_all_classifications" translatable="false">2</string>
    <string name="pref_title_face_detector_performance_mode" translatable="false">Performance mode</string>
    <string name="pref_key_live_preview_face_detection_performance_mode" translatable="false">lpfdpm</string>
    <string name="pref_entries_face_detector_performance_mode_fast" translatable="false">Fast</string>
    <string name="contains_at_least_6_characters">Contains at least 6 characters</string>
    <string name="contains_both_lower_a_z_and_upper_case_letters_a_z">Contains both lower (a-z) and upper case letters (A-Z)</string>
    <string name="contains_at_least_one_number_0_9_or_a_symbol">Contains at least one number (0-9) or a symbol</string>
</resources>