<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.fenris.motion2coach.viewmodel.AuthViewModel" />

        <variable
            name="handler"
            type="com.fenris.motion2coach.interfaces.SignupValidationHandler" />
    </data>
<ScrollView

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".view.activity.terms.TermsActivity">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:orientation="horizontal"
                android:background="@color/color_blue"
                >

                <ImageView
                    android:onClick="onBackPressed"
                    android:layout_margin="@dimen/_10sdp"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:layout_width="wrap_content"
                    app:tint="@color/white"
                    android:layout_height="match_parent"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:textSize="@dimen/_15ssp"
                    android:fontFamily="@font/opensans_bold"
                    android:textColor="@color/white"
                    android:text="@string/address_information"
                    />


            </LinearLayout>
            <ImageView
                android:layout_gravity="start|bottom"
                android:src="@drawable/step_two_line"
                android:layout_width="wrap_content"
                app:tint="@color/white"
                android:layout_height="wrap_content"/>
        </FrameLayout>
        <TextView
            android:padding="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start"
            android:layout_marginTop="@dimen/_15sdp"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/opensans_bold"
            android:textColor="@color/black"
            android:text="@string/let_s_start_by_creating_your_account"
            />
        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:hint="@string/street"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/street"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/et_border_selector"
                    android:textSize="@dimen/_13ssp"
                    android:text="@={viewModel.street}"

                    android:fontFamily="@font/opensans_regular"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:hint="@string/house_number"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/house"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/et_border_selector"
                    android:textSize="@dimen/_13ssp"
                    android:text="@={viewModel.house}"
                    android:inputType="text"
                    android:fontFamily="@font/opensans_regular"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:hint="@string/zip_code"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/zip"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/et_border_selector"
                    android:textSize="@dimen/_13ssp"
                    android:text="@={viewModel.zip}"
                    android:inputType="number"
                    android:fontFamily="@font/opensans_regular"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:hint="@string/country"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@={viewModel.country}"
                    android:background="@drawable/et_border_selector"
                    android:textSize="@dimen/_13ssp"

                    android:fontFamily="@font/opensans_regular"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconTint="@android:color/darker_gray"
                app:endIconMode="dropdown_menu"
                >

                <AutoCompleteTextView
                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:background="@drawable/et_border_selector"
                    android:id="@+id/spinCity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/city"
                    android:text="@={viewModel.city}"
                    android:focusableInTouchMode="true"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:textSize="@dimen/_13ssp"                        />
            </com.google.android.material.textfield.TextInputLayout>





            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:hint="@string/phone_number"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/et_border_selector"
                    android:textSize="@dimen/_13ssp"
                    android:maxLength="15"
                    android:text="@={viewModel.phone}"
                    android:inputType="phone"
                    android:fontFamily="@font/opensans_regular"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/next"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:textAllCaps="false"
                android:onClick="@{()->handler.onValidationClicked()}"
                android:textSize="@dimen/_13ssp"
                android:enabled="false"
                android:background="@drawable/ic_rectangle_button"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/next"/>
            <TextView
                android:id="@+id/tv_terms"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/opensans_medium"

                android:text="@string/terms_register"
                />
        </LinearLayout>

    </LinearLayout>


</ScrollView>
</layout>
